# trustloop

./: .dockerignore  .env.example  .gitignore  AUDIT_FIX_TODO.md  AUDIT_V4_IMPLEMENTATION_TODO.md  Dockerfile  IMPLEMENTATION_TODO.md  README.md  TrustLoop-System-Design-detail.excalidraw  TrustLoop-System-Design.excalidraw  docker-compose.localstack.yml  dodopayments-checkout-1.8.0.tgz  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  start.sh  tsconfig.json  vitest.config.ts
e2e/: register-create-incident-publish-update.spec.ts
prisma/: schema.prisma
public/: sw.js
remotion/: Root.tsx  TrustLoopHowItWorks.tsx
scripts/: export-excalidraw-svg.mjs  fix-8pt-spacing.js  generate-invite-codes.ts  init-localstack.ts  modernize-ui.js  process-billing-grace.ts  seed.ts  send-invite-codes-prod.ts  setup-env.sh  start-local.mjs  tail-logs.mjs  verify-ai-keys.ts  worker.ts
src/: instrumentation.ts  middleware.ts  proxy.ts
test-results/: .last-run.json
trustloop-desktop/: .gitignore  (+4 more)
trustloop-desktop-tauri/: .gitignore  README.md  package.json
trustloop-desktop-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
trustloop-desktop-tauri/src-tauri/capabilities/: default.json
trustloop-desktop-tauri/src-tauri/src/: auth.rs  db.rs  lib.rs  main.rs  menu.rs  redis_mod.rs  secrets.rs  state.rs
trustloop-desktop-tauri/src-tauri/src/commands/: analytics.rs  auth_cmds.rs  dashboard.rs  incidents.rs  integrations.rs  mod.rs  profile.rs  protocol.rs  security.rs  util.rs  workspace.rs
(+497 files in other folders)
