[package]
name = "trustloop-desktop"
version = "0.10.0"
description = "TrustLoop — Native macOS Desktop App (Apple Silicon)"
authors = ["TrustLoop"]
edition = "2021"

[lib]
name = "trustloop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
aes-gcm = "0.10"
hkdf = "0.12"
base64 = "0.22"
csv = "1"
open = "5"
window-vibrancy = "0.6"
urlencoding = "2"
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
